fixed last image now is visible

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -17,7 +17,7 @@
     text-decoration: none solid rgb(255, 255, 255);
     transform-origin: 680px 319px;
     white-space: nowrap;
-    width: 1360px;
+    width: 101.5%;
     border: 0px none rgb(255, 255, 255);
     font: 16px / 16px proxima-sbd;
     outline: rgb(255, 255, 255) none 0px;
